maid (0.4.0) unstable; urgency=low

  * New methods: "checksum_of", "content_types", "dupes_in",
    "escape_glob", "files", "media_type", "mime_type",
    "spotlight_content_types", "where_content_type"
  * Ended official support for Ruby 1.8.7 and 1.9.2 (Closes: #108)
  * Update to rubyzip 1.0.0 (Closes: #109)
  * Remove "ohai" dependency which required native extensions (Closes: #112)
  * Updated other dependencies (Closes: #111)
  * Mu Ye: Require "--force" option to cause real cleaning to take place (Closes: #78)
  * Graham Siener: Add UTF-8 support for "zipfile_contents" tool (Closes: #35)
  * Justin Hileman: Add ability to list duplicate files (Closes: #15)
  * Mikael Hultgren: Rotate log file
  * John Colvin: Add filetype detection and filtering (Closes: #51)
  * Mu Ye: Improve command line spec coverage (Closes: #97)
  * Bradley Smith: Add "locate" support on Ubuntu (Closes: #67)
  * Vladimir Agafonkin: Add "escape_glob" method for escaping brackets in paths
    that will be passed to "dir" (Closes: #104)
  * Changed from ArgumentError to NotImplementedError when a command is
    unsupported on the host OS.

 -- Benjamin Oakes <hello@benjaminoakes.com>  TODO

maid (0.3.0) stable; urgency=high

  * Stats!  { 'collaborators' => 11, 'downloads' => 5664, 'forks' => 36,
    'open_issues' => 29, 'closed_issues' => 73, 'stars' => 672,
    'users_sharing_rules' => 21 }
  * Only allow "move" to move to existing directories.  Renaming files
    can be accomplished with the new "rename" tool.  This fixes a bug in
    overwrite warnings.  (Closes: #87)
  * NOTE: A previous alpha of v0.3.0 was released as v0.2.3.alpha.1. 

 -- Benjamin Oakes <hello@benjaminoakes.com>  Wed, 03 Apr 2013 00:00:00 +0000

maid (0.2.2) stable; urgency=high

  * Stats!  { 'collaborators' => 11, 'downloads' => 5017, 'forks' => 36,
    'open_issues' => 35, 'closed_issues' => 60, 'stars' => 654,
    'users_sharing_rules' => 19 }
  * "urgency=high" because of security related change in #70